# geek_rust_homework

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  rest.rest
src/: args.rs  lib.rs  main.rs  process.rs  utils.rs
src/args/: chacha20.rs  file.rs  jwt.rs
src/process/: chacha20.rs  file.rs  jwt.rs
