[package]
name = "rcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
enum_dispatch = "0.3.13"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.209", features = ["derive"] }
